task: latest updates

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <h3>Hello, I'm</h3>
             <h1>Tomiwa Adedokun</h1>
             <h5>A Software Engineer <span>From Lagos, Nigeria</span></h5>
-            <p>I'm an engineer with skills that spans across Software development, Cloud engineering, Site Reliability Engineering, DevOps, <br> and also very passionate about the tech community.</p>
+            <p>I'm an engineer with skills that spans across Software development, Cloud engineering, Site Reliability Engineering and DevOps. <br> Also, I'm very passionate about the tech community.</p>
             <div class="social">
                 <a target="_blank" href="https://www.linkedin.com/in/tomiwa-adedokun-excellence/"><i class='bx bxl-linkedin'></i></a> <!--Linkedin Profile-->
                 <a target="_blank" href="https://github.com/Extomvi"><i class='bx bxl-github' ></i></a>         <!--GitHub Profile-->
