--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
             <li><a href="#education">Education</a></li>
             <li><a href="#contact">Contact</a></li>
         </ul>
-        <a target="_blank" href="https://docs.google.com/document/d/1DVnmw0NpZLQSpLbkDlZPkigg5ZpNH3ZLgBdIMWcKRrk/edit?usp=sharing" class="top-btn">View Resume</a> <!--Inserted link to my resume(Google Docs site)-->
+        <!--<a target="_blank" href="https://docs.google.com/document/d/1DVnmw0NpZLQSpLbkDlZPkigg5ZpNH3ZLgBdIMWcKRrk/edit?usp=sharing" class="top-btn">View Resume</a> -->
+        <!--Inserted link to my resume(Google Docs site)-->
         <button  id="top-btn">Download Resume</a> <!--Script to download Resume-->
     </header>
 
