task: added elements for SEO

--- a/index.html
+++ b/index.html
@@ -1,16 +1,37 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Tomiwa Portfolio</title>
+    <title>Tomiwa Adedokun | Software Engineer | Site Reliability Engineer</title>
+    <meta name="description"
+         content="Tomiwa Adedokun, Site Reliability Engineer, DevOps Engineer, Software Engineer, Linux Admin, Backend Engineer focused on scale, Tech Mentor" />    
+    <meta name="keywords" content="Tomiwa Adedokun, Nigerian, SRE, DevOps, Software Engineer, Linux" />
+    <meta name="author" content="Tomiwa Adedokun" />
+    <meta name="topic" content="Software Engineer, Site Reliability Engineer">
+    <meta name="summary" content="Site Reliability Engineer with backend skills on JS, Node, Python and Software engineering experience">
+    <meta name="abstract" content="Site Reliability Engineer">
+    <meta name="subject" content="Site Reliability Engineer">
+    <meta name="copyright" content="extomvi.github.io">
+    <meta name="language" content="English">
+    <meta name="robots" content="index,follow"/>
+    <meta name="Classification" content="Business">
+    <meta name="author" content="Tomiwa Adedokun, exceltadedokun@gmail.com">
+    <meta name="designer" content="Tomiwa Adedokun">
+    <meta name="reply-to" content="exceltadedokun@gmail.com">
+    <meta name="owner" content="Tomiwa Adedokun">
+    <meta name="url" content="https://extomvi.github.io/Portfolio/">
+    <meta name="identifier-URL" content="https://extomvi.github.io/Portfolio/">
+    <meta name="category" content="Portfolio">
+    <meta name="coverage" content="Worldwide">
+    <meta name="distribution" content="Global">
+    <meta name="rating" content="General">
+    <meta name="revisit-after" content="7 days">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1" />
     <link rel="stylesheet" href="https://unpkg.com/boxicons@latest/css/boxicons.min.css">
     <link rel="icon" type="image/png" href="img/logo_1.png">
-
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Jost:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
-
     <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
