task: minor update

--- a/index.html
+++ b/index.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <!--Meta-->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>Tomiwa Adedokun | Software Engineer | Site Reliability Engineer</title>
     <meta name="description"
-         content="Tomiwa Adedokun, Site Reliability Engineer, DevOps Engineer, Software Engineer, Linux Admin, Backend Engineer focused on scale, Tech Mentor" />    
+        content="Tomiwa Adedokun, Site Reliability Engineer, DevOps Engineer, Software Engineer, Linux Admin, Backend Engineer focused on scale, Tech Mentor" /> 
     <meta name="keywords" content="Tomiwa Adedokun, Nigerian, SRE, DevOps, Software Engineer, Linux" />
     <meta name="author" content="Tomiwa Adedokun" />
     <meta name="topic" content="Software Engineer, Site Reliability Engineer">
@@ -25,14 +28,30 @@
     <meta name="distribution" content="Global">
     <meta name="rating" content="General">
     <meta name="revisit-after" content="7 days">
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1" />
     <link rel="stylesheet" href="https://unpkg.com/boxicons@latest/css/boxicons.min.css">
     <link rel="icon" type="image/png" href="img/logo_1.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Jost:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="css/style.css">
+
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-151942955-1"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'UA-151942955-1');
+    </script>
+
+    <!-- Open Graph data -->
+    <meta property="og:title" content="Tomiwa Adedokun | Software Engineer | Site Reliability Engineer" />
+    <meta property="og:image" content="imag/mains.png" />
+    <meta property="og:site_name" content="Tomiwa Adedokun Portfolio" />
+    <meta property="og:description" content="The portfolio of a Site Reliability Engineer; Tomiwa Adedokun." />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://extomvi.github.io/Portfolio/" />
 </head>
 <body>
 
@@ -51,7 +70,8 @@
         </ul>
         <!--<a target="_blank" href="https://docs.google.com/document/d/1DVnmw0NpZLQSpLbkDlZPkigg5ZpNH3ZLgBdIMWcKRrk/edit?usp=sharing" class="top-btn">View Resume</a> -->
         <!--Inserted link to my resume(Google Docs site)-->
-        <button  id="top-btn">Download Resume</a> <!--Script to download Resume-->
+        <button id="top-btn">Download Resume</a> 
+        <!--Script to download Resume-->
     </header>
 
     <!-- Home -->
