task: updates to 'About Me'

--- a/index.html
+++ b/index.html
@@ -107,7 +107,9 @@
         <div class="about-text">
             <h3>I'm a Software Engineer</h3>
             <h2>I can build software systems</h2>
-            <p>Backend experience in various Software architectures, Cloud, Site Reliability and DevOps engineer with an additional skillset in Machine learning and Artificial intelligence.</p>
+            <p>Over the years, I've navigated through the realms of Python, C++, Java, and JavaScript, unraveling the mysteries of code. Whether it's crafting elegant solutions, taming wild bugs, or building user-friendly interfaces. I have backend experience in various Software architectures, Cloud, Site Reliability and DevOps engineering with an additional skillset in Machine learning and Artificial intelligence.</p>
+            <p>When I'm not conquering bugs and crafting algorithms, I'm a nature advocate (love taking hikes, mountain climbing et al...), a skillful tennis player, and a weekend stargazer. I believe the cosmos has a lot to teach us, just like the ever-evolving world of tech. <br>Oh, and if you ever want to challenge me to a tennis match, bring it on! 🎾</p>
+            <p>Now that you have an overview of who I am, why not embark on a coding adventure with me? I'm always excited to collaborate, explore new technologies, and turn your software dreams/ideas into reality.</p>
             <a href="mailto:exceltadedokun@gmail.com" class="btn">Hire Me</a>
         </div>
     </section>
