task: Update index.html

--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
                         </li>
                         <br>
                         <li>
-                            ● Contribute to the development and implementation of disaster recovery plans, resulting in seamless business continuity during maintenance or unexpected outages by ensuring systems are utilizing cloud best practices..                       
+                            ● Contribute to the development and implementation of disaster recovery plans, resulting in seamless business continuity during maintenance or unexpected outages by ensuring systems are utilizing cloud best practices.                       
                         </li>
                         <p></p>
 
@@ -364,7 +364,7 @@
                         </li>
                         <br>
                         <li>
-                            ● Used Workplace and Slack as tools for effective communication between team members across multiple regions for effective collaboration
+                            ● Used Workplace and Slack as tools for effective communication between team members across multiple regions for effective collaboration.
                         </li>
                         <p></p>
 
@@ -460,7 +460,7 @@
                             <br>
                         </p>
                         <li>
-                            ● Worked in a team of seven to develop a product amongst the SDG goals so as to help those in need and improve the lives of those in our community. <a target="_blank" href="https://drive.google.com/file/d/1qmuhEYLeRPkCV3-P1wD_ztPC163ov74v/view?usp=sharing">Certification</a>                        </li>
+                            ● Worked in a team of seven to develop a product amongst the SDG goals so as to help those in need and improve the lives of those in our community. <a target="_blank" href="https://drive.google.com/file/d/1qmuhEYLeRPkCV3-P1wD_ztPC163ov74v/view?usp=sharing">Certification</a></li>
                         <br>
                         <li>
                             ● Managed the backend development section alongside a fellow team member by using Facebook’s open-source tools and Django framework for the development of the application.                        
@@ -571,16 +571,16 @@
                         </p>
                         <li>
                             ● Used machine learning and AI models to develop a Staff Promotion Algorithm for predicting the members of staff that are likely to be
-                            promoted based on defined personal and performance parameters/metrics(<a target="_blank" href="http://www.kaggle.com/c/intercampusai2019/overview">Overview</a>)                       
+                            promoted based on defined personal and performance parameters/metrics(<a target="_blank" href="http://www.kaggle.com/c/intercampusai2019/overview">Overview</a>).                       
                         </li>
                         <br>
                         <li>
                             ● Used python packages; numpy, panda,matplotlib & other data analysis interpreters for data science to analyze data sets and also visualize
-                            the data sets                        
+                            the data sets.                        
                         </li>
                         <br>
                         <li>
-                            ● Worked alongside the <b>University Team</b> in building models during the bootcamp, and we were awarded for our team effort<a target="_blank" href="https://unilag.edu.ng/?p=5677">Unilag wins AI School of the year award</a>
+                            ● Worked alongside the <b>University Team</b> in building models during the bootcamp, and we were awarded for our team effort<a target="_blank" href="https://unilag.edu.ng/?p=5677">Unilag wins AI School of the year award</a>.
                         </li>
                         <br>
                         <li>
@@ -636,7 +636,7 @@
                         </li>
                         <br>
                         <li>
-                            ● Introduced to a brief background knowledge of Artificial Intelligence and Machine Learning.                        </li>
+                            ● Introduced to a brief background knowledge of Artificial Intelligence and Machine Learning.</li>
                         <p></p>
 
                     </ul>
