task: Update index.html to edit Renmoney role

--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
                         </li>
                         <br>
                         <li>
-                            ● Performe documentation of technical processes within the engineering team.                       
+                            ● Perform documentation of technical processes within the engineering team.                       
                         </li>
                         <br>
                         <li>
