Update index.html to reflect new role

--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
     <link rel="icon" type="image/png" href="img/logo_1.png">
     <meta name="description"
         content="Tomiwa Adedokun, Site Reliability Engineer, DevOps Engineer, Software Engineer, Linux Admin, Backend Engineer focused on scale, Tech Mentor" /> 
-    <meta name="keywords" content="Tomiwa Adedokun, Nigerian, SRE, DevOps, Software Engineer, Linux" />
+    <meta name="keywords" content="Tomiwa Adedokun, Nigerian, SRE, DevOps, Software Engineer, System Development Engineer, Amazon, AWS, Linux" />
     <meta name="author" content="Tomiwa Adedokun" />
     <meta name="topic" content="Software Engineer, Site Reliability Engineer">
     <meta name="summary" content="Site Reliability Engineer with backend skills on JS, Node, Python and Software engineering experience">
-    <meta name="abstract" content="Site Reliability Engineer">
-    <meta name="subject" content="Site Reliability Engineer">
+    <meta name="abstract" content="System Engineer">
+    <meta name="subject" content="System Engineer">
     <meta name="copyright" content="extomvi.github.io">
     <meta name="language" content="English">
     <meta name="robots" content="index,follow"/>
@@ -47,10 +47,10 @@
     </script>
 
     <!-- Open Graph data -->
-    <meta property="og:title" content="Tomiwa Adedokun | Software Engineer | Site Reliability Engineer" />
+    <meta property="og:title" content="Tomiwa Adedokun | Software Engineer | System Development Engineer" />
     <meta property="og:image" content="imag/mains.png" />
     <meta property="og:site_name" content="Tomiwa Adedokun Portfolio" />
-    <meta property="og:description" content="The portfolio of a Site Reliability Engineer; Tomiwa Adedokun." />
+    <meta property="og:description" content="The portfolio of a System Development Engineer; Tomiwa Adedokun." />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://extomvi.github.io/Portfolio/" />
 </head>
@@ -122,7 +122,57 @@
 			<p>Most common methods for software engineering best practices <br> that aligns with AGILE software, Site Reliability Engineering and DevOps practices</p>
 		</div>
         <div class="timeline" id="experience-timeline">
+	    <!--AWS-->
+	    <div class="item">
+                <div class="workplace">
+                    <h3 class="place">
+                        <i class='bx bx-link-alt'></i>
+                        <a target="_blank" href="https://aws.amazon.com">
+                            <u>Amazon</u>
+                            <small>System Development Engineer</small>
+                        </a>
+                    </h3>
 
+                    <div class="location">
+                        <i class='bx bx-location-plus'></i>
+                        Dublin, Ireland
+                    </div>
+                </div>
+
+                <div class="job-meta">
+
+                    <div class="title">System Development Engineer</div>
+                    <div class="time">August. 2024 - Present</div>
+                </div>
+
+                <div class="job-desc">
+                    <ul>
+                        <p>
+                            <b>Technologies:</b>
+                            <br>
+                            AWS · Java · Python · Fargate · ECS · Bash · Typescript
+                        </p>
+                        <p>
+                            <b>Responsibilities:</b>
+                            <br>
+                        </p>
+                        <li>
+                            ● Deploy and manage applications for AWS Networking.
+                        </li>
+                        <br>
+                        <li>
+                            ● Perform documentation of technical processes within the engineering team.                       
+                        </li>
+                        <br>
+                        <li>
+                            ● Contribute to the development and implementation of disaster recovery plans, resulting in seamless business continuity during maintenance or unexpected outages by ensuring systems are utilizing cloud best practices.                       
+                        </li>
+                        <p></p>
+
+                    </ul>
+                </div>
+            </div>
+            <!--//AWS-->
             <div class="item">
                 <!--Renmoney-->
                 <div class="workplace">
@@ -143,7 +193,7 @@
                 <div class="job-meta">
 
                     <div class="title">Site Reliability Engineer</div>
-                    <div class="time">April. 2023 - Present</div>
+                    <div class="time">April. 2023 - August. 2024</div>
                 </div>
 
                 <div class="job-desc">
@@ -852,7 +902,7 @@
 
     <!--------ends---->
 	<div class="ends">
-		<p>Tomiwa Adedokun © 2023</p>
+		<p>Tomiwa Adedokun © 2025</p>
 	</div>
 
 	<script src="https://unpkg.com/scrollreveal"></script>
