Update index.html with change in role

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
         content="Tomiwa Adedokun, Site Reliability Engineer, DevOps Engineer, Software Engineer, Linux Admin, Backend Engineer focused on scale, Tech Mentor" /> 
     <meta name="keywords" content="Tomiwa Adedokun, Nigerian, SRE, DevOps, Software Engineer, System Development Engineer, Amazon, AWS, Linux" />
     <meta name="author" content="Tomiwa Adedokun" />
-    <meta name="topic" content="Software Engineer, Site Reliability Engineer">
-    <meta name="summary" content="Site Reliability Engineer with backend skills on JS, Node, Python and Software engineering experience">
+    <meta name="topic" content="Software Engineer, System Development Engineer, Site Reliability Engineer">
+    <meta name="summary" content="System Development Engineer with backend skills on JS, Node, Python and Software engineering experience">
     <meta name="abstract" content="System Engineer">
     <meta name="subject" content="System Engineer">
     <meta name="copyright" content="extomvi.github.io">
@@ -80,7 +80,7 @@
         <div class="home-text">
             <h3>Hello, I'm</h3>
             <h1>Tomiwa Adedokun</h1>
-            <h5>A Software Engineer <span>From Lagos, Nigeria</span></h5>
+            <h5>A System Development Engineer <span>From Lagos, Nigeria</span></h5>
             <p>I'm an engineer with skills that spans across Software development, Cloud engineering, Site Reliability Engineering and DevOps. <br> Also, I'm very passionate about the tech community.</p>
             <div class="social">
                 <a target="_blank" href="https://www.linkedin.com/in/tomiwa-adedokun-excellence/"><i class='bx bxl-linkedin'></i></a> <!--Linkedin Profile-->
@@ -105,7 +105,7 @@
         </div>
 
         <div class="about-text">
-            <h3>I'm a Software Engineer</h3>
+            <h3>I'm a System Development Engineer</h3>
             <h2>I can build software systems</h2>
             <p>Over the years, I've navigated through the realms of Python, C++, Java, and JavaScript, unraveling the mysteries of code. Whether it's crafting elegant solutions, taming wild bugs, or building user-friendly interfaces. I have backend experience in various Software architectures, Cloud, Site Reliability and DevOps engineering with an additional skillset in Machine learning and Artificial intelligence.</p>
             <p>When I'm not conquering bugs and crafting algorithms, I'm a nature advocate (love taking hikes, mountain climbing et al...), a skillful tennis player, and a weekend stargazer. I believe the cosmos has a lot to teach us, just like the ever-evolving world of tech. <br>Oh, and if you ever want to challenge me to a tennis match, bring it on! 🎾</p>
@@ -713,7 +713,7 @@
                             </div>
                         </div>
                         <h4 class="skill-name">Python</h4>
-                        <div class="level">5 years</div>
+                        <div class="level">6 years</div>
                         <div class="desc"> </div>
                     </div>
 
@@ -726,7 +726,7 @@
                             </div>
                         </div>
                         <h4 class="skill-name">GCP</h4>
-                        <div class="level">Cloud Architect, 3 years</div>
+                        <div class="level">Cloud Architect, 5 years</div>
                         <div class="desc"> </div>
                     </div>
 
@@ -739,7 +739,7 @@
                             </div>
                         </div>
                         <h4 class="skill-name">Azure</h4>
-                        <div class="level">DevOps, 1 year</div>
+                        <div class="level">DevOps, 3 year</div>
                         <div class="desc"> </div>
                     </div>
 
@@ -752,7 +752,7 @@
                             </div>
                         </div>
                         <h4 class="skill-name">Linux</h4>
-                        <div class="level">3 years</div>
+                        <div class="level">4 years</div>
                         <div class="desc"> </div>
                     </div>
 
@@ -765,7 +765,7 @@
                             </div>
                         </div>
                         <h4 class="skill-name">AWS</h4>
-                        <div class="level">Cloud Practioner, 2 years</div>
+                        <div class="level">Cloud Practioner, 3 years</div>
                         <div class="desc"> </div>
                     </div>
                 </div>
